# TWIN

./: .gitignore  AWS_DEPLOYMENT_README.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.dev  FINAL_MULTI_USER_SUCCESS.md  FINAL_SUCCESS.md  INTEGRATION_ARCHITECTURE.md  INTEGRATION_COMPLETE.md  LAUNCH_READY.md  LAUNCH_SUCCESS.md  MULTI_USER_LAUNCH_SUCCESS.md  MULTI_USER_SUCCESS.md  NOTION_SETUP.md  QUICK_START.md  README.md  START_SERVERS.ps1  TEST_PLAN.md  TOTAL_LIFE_AI_VISION.md  YNAB_DEMO_GUIDE.md  build-and-push-ecr.sh  deploy-aws.ps1  deploy-aws.sh  deploy-frontend.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup-basic.ps1  setup-config.sh  setup-custom-domain.sh  setup-github-oidc.sh  start-all.ps1  start-backend.ps1  start-frontend.ps1  start_backend.ps1  teardown-aws.sh  update-ecs-service.sh
.github/workflows/: deploy.yml
api/v1/: api.py  search.py  sources.py  sync.py
app/: main.py
aws-infrastructure/: app.py  cdk.json  requirements.txt  setup-cdk.ps1  setup-cdk.sh
aws-infrastructure/cdk.out/: TotalLifeAI-Prod-Clean.assets.json  TotalLifeAI-Prod-Clean.template.json  TotalLifeAI-Production-V2.assets.json  TotalLifeAI-Production-V2.template.json  TotalLifeAI-Production.assets.json  TotalLifeAI-Production.template.json  manifest.json  tree.json
backend/: ENV_TEMPLATE.md  README.md  alembic.ini  prod.env
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_users_conversations_messages.py
backend/app/: main.py
backend/app/api/v1/: api.py  (+4 more)
backend/app/core/: auth.py  config.py
backend/app/db/: models.py  session.py
backend/app/models/: schemas.py  user.py
claudedocs/: code_analysis_report.md  deployment_fix.md  improvements_summary.md
core/: config.py
deployment/: DEPLOYMENT_GUIDE.md  PRODUCTION_READY.md
deployment/aws/: ecs-task-definition.json  infrastructure.yaml
deployment/azure/: acr-setup.sh
deployment/docker/: build-and-push.sh
deployment/scripts/: deploy-to-ecs.sh  deploy-windows.ps1  setup-aws-infrastructure.sh
frontend/: Dockerfile.dev  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
models/: schemas.py
services/: knowledge_manager.py  knowledge_source.py  notion_parser.py
(+22 files in other folders)
